# tip-calculator

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.gradle.kts  local.properties  settings.gradle.kts  tipcalc.cob  tipcalcapp.cob  tipoutput.cpy  tipreport.cob
.github/workflows/: build.yml
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/cpp/: CMakeLists.txt  TipCalculatorJni.c  tipcalculator.cpp
androidApp/src/main/kotlin/ca/rmen/tipcalculator/: AndroidAppGraph.kt  MainActivity.kt  PreviewCalculateTipUseCase.kt
docs/: architecture.md
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/KotlinMultiplatformLinkedPackage/: Package.swift
iosApp/KotlinMultiplatformLinkedPackage/subpackages/ca_rmen_gnucobol_kmp_0_0_5/: Package.swift
iosApp/iosApp/: iOSApp.swift  iosApp-BridgingHeader.h
iosApp/iosApp.xcodeproj/: project.pbxproj
shared/: build.gradle.kts
shared/src/androidMain/kotlin/ca/rmen/tipcalculator/: Bridge.kt  Platform.android.kt  TipCalculatorApplication.kt
shared/src/androidMain/kotlin/ca/rmen/tipcalculator/domain/: AndroidReportPathProvider.kt  AndroidTipCalculator.kt  AndroidTipReporter.kt  CalculateTipUseCase.android.kt  PrintReceiptUseCase.android.kt
shared/src/androidMain/kotlin/ca/rmen/tipcalculator/domain/calculator/: AndroidTipCalculator.kt
shared/src/androidMain/kotlin/ca/rmen/tipcalculator/domain/reporter/: AndroidReportPathProvider.kt  AndroidTipReporter.kt
shared/src/commonMain/cobol/: tipinput.cpy  tipoutput.cpy  tipreport.cob  tipservice.cob
shared/src/commonMain/composeResources/values/: strings.xml
shared/src/commonMain/cpp/: TipCalculatorBridge.h
shared/src/commonMain/kotlin/ca/rmen/tipcalculator/: App.kt  Greeting.kt  GreetingUtil.kt  Platform.kt  TipCalculatorViewModel.kt
shared/src/commonMain/kotlin/ca/rmen/tipcalculator/di/: AppGraph.kt  AppModule.kt  Koin.kt
shared/src/commonMain/kotlin/ca/rmen/tipcalculator/domain/: CalculateTipUseCase.kt  PrintReceiptUseCase.kt  ReportPathProvider.kt  ServiceLevel.kt  TipCalculations.kt  TipCalculator.kt  TipInput.kt  TipReporter.kt  TipResult.kt
shared/src/commonMain/kotlin/ca/rmen/tipcalculator/domain/calculator/: CalculateTipUseCase.kt  TipCalculator.kt
shared/src/commonMain/kotlin/ca/rmen/tipcalculator/domain/model/: ServiceLevel.kt  TipCalculations.kt  TipInput.kt
shared/src/commonMain/kotlin/ca/rmen/tipcalculator/domain/reporter/: PrintReceiptUseCase.kt  ReportPathProvider.kt  TipReporter.kt
shared/src/commonMain/kotlin/ca/rmen/tipcalculator/ui/: Color.kt  Components.kt  ScaleToFitWidthLayout.kt  Theme.kt  TipForm.kt  TipFormState.kt  TipFormValidators.kt  TipReport.kt  TipResultState.kt  TipResultUi.kt  TipScreen.kt
shared/src/commonMain/kotlin/ca/rmen/tipcalculator/ui/components/: Components.kt  ScaleToFitWidthLayout.kt
shared/src/commonMain/kotlin/ca/rmen/tipcalculator/ui/theme/: Color.kt  Theme.kt
shared/src/commonMain/kotlin/ca/rmen/tipcalculator/viewmodel/: TipCalculatorViewModel.kt
shared/src/iosMain/cpp/: ExposeToKotlin.h
shared/src/iosMain/kotlin/ca/rmen/tipcalculator/: IosAppGraph.kt  MainViewController.kt  Platform.ios.kt
shared/src/iosMain/kotlin/ca/rmen/tipcalculator/domain/: CalculateTipUseCase.ios.kt  IosReportPathProvider.kt  IosTipCalculator.kt  IosTipReporter.kt  PrintReceiptUseCase.ios.kt
shared/src/iosMain/kotlin/ca/rmen/tipcalculator/domain/calculator/: IosTipCalculator.kt
shared/src/iosMain/kotlin/ca/rmen/tipcalculator/domain/reporter/: IosReportPathProvider.kt  IosTipReporter.kt
shared/src/nativeInterop/cinterop/: tipCalculator.def
